zram_drv: allow overriding zram size from kernel
Signed-off-by: clarencelol <clarencekuiek@proton.me>

--- a/drivers/block/zram/Kconfig
+++ b/drivers/block/zram/Kconfig
@@ -30,6 +30,11 @@ config ZRAM_WRITEBACK
 
 	 See Documentation/blockdev/zram.txt for more information.
 
+config ZRAM_SIZE_OVERRIDE
+	int "zram size to set from kernel"
+	range 1 8
+	default 2
+
 config ZRAM_MEMORY_TRACKING
 	bool "Track zRam block status"
 	depends on ZRAM && DEBUG_FS
